Fix sidebar font size on mobile displays

--- a/css/_theme.scss
+++ b/css/_theme.scss
@@ -4,7 +4,7 @@ $text-color-on-accent: white;
 .sidebar {
 	background-color: $accent-color;
 	color: $text-color-on-accent;
-	font-size: (16px/20px) * 1rem;
+	font-size: 16px;
 	.new {
 		font-weight: bold;
 	}
